cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
  spec:
    containers:
    - name: redis
      image: redis
      ports:
    - containerPort: 6379
