my-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app-deployment
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}                 # Allow incoming traffic from all pods in the same namespace

        - podSelector:                    # Allow incoming traffic from a specific pod with label app=trusted
            matchLabels:
              app: trusted
  egress:
    - to:
        - podSelector: {}                  # Allow outgoing traffic to all pods in the same namespace
                                           # Default deny rules are implicit unless specified in ingress or egress
